--- a/angular.json
+++ b/angular.json
@@ -24,14 +24,14 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/bootstrap/css/bootstrap.min.css",
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/animate.css/animate.min.css",
               "src/styles.css"
             ],
             "scripts": [
-              "./node_modules/jquery/jquery-3.4.1.slim.min.js",
-              "./node_modules/popper/dist/umd/popper.min.js",
-              "./node_modules/bootstrap/js/bootstrap.min.js"
+              "./node_modules/jquery/dist/jquery.slim.min.js",
+              "./node_modules/popper.js/dist/umd/popper.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
