--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "mysql": "^2.17.1",
+    "pdfmake": "^0.1.63",
+    "pdfmake-wrapper": "^2.0.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
