--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
+    "image-to-base64": "^2.0.1",
     "jquery": "^3.4.1",
     "mysql": "^2.18.1",
     "pdfmake": "^0.1.63",
